Added admin and new fonts

--- a/wp-content/themes/svbtle/sass/main.scss
+++ b/wp-content/themes/svbtle/sass/main.scss
@@ -10,8 +10,8 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
 
-$header_font_stack: league-gothic-1, league-gothic-2, sans-serif;
-$body_font_stack: museo-sans-1, museo-sans-2, sans-serif;
+$header_font_stack: "adelle",serif;
+$body_font_stack: "jubilat",sans-serif;
 
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {
   display: block;
